--- a/main_page.html
+++ b/main_page.html
@@ -1,3 +1,12 @@
-git remote add origin https://github.com/mikolajpasieka/festyn_webpage.git
-git branch -M main
-git push -u origin main
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Festyn z mundurem dla Filipka</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    
+</body>
+</html>
