--- a/main_page.html
+++ b/main_page.html
@@ -7,6 +7,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1> FESTYN Z MUNDUREM DLA FILIPKA</h1>
+    <h2> PLAN IMPREZY</h2>
+
+    <div class = "container" > 
+        <div class= "zdjecie" > 
+            <img src="filip.jpg" alt="Filip Turek">
+        </div>
+
+        <div class="tekst">
+            <h3> Dla najmłodszych</h3>
+
+
+        </div>
+
+
+
+
+
+
+    </div>
+   
+    <p> dmuchańce </p>
+    <p> animacje </p>
+    <p> malowanie twarzy</p>
+    <p> gry i zabawy </p>
+
+    <p> program dla dzieci będzie przygotowany przez wojsko, policję oraz straż pożarną</p>
+    <p> zapoznanie ze sprzetem oraz praca slużb mundurowych</p>
+
+    <p> kurs pierwszej pomocy dla dzieci i dorosłych</p>
+
+    <p> będzie mozna zakupić przygotowne bedą rówineż posiłki przez koło gospodyń wiejskich oraz mieszkańców stykowa</p>
+dochod z ich spzedazy bedzie przekazany na rehabilitację dla filipa turka 
+
+<p> licytacja </p>
+
+dokladny program licytacji bedzie uzupełniany na bieżąco 
+    <p> pokaz wspinaczki industrialnej na starej elektrowni </p>
+
+    zaparaszmy wszytskich bardzo serdecznie do udziału i wpomożenia szczytnego celu 
+    gwarantujemy niezapomniane wspomnienia i bardzo dobra zabawe 
+
+    wuystep przygotowany przez uczniow zpo stykow 
+
+    oprawę muzyczna wydarzenia zajmie się pan Marcin Kosmala 
     
 </body>
 </html>
