--- a/main_page.html
+++ b/main_page.html
@@ -7,51 +7,101 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> FESTYN Z MUNDUREM DLA FILIPKA</h1>
-    <h2> PLAN IMPREZY</h2>
+    <h1>
+        FESTYN Z MUNDUREM DLA FILIPKA
+    </h1>
+    <h2>
+        PROGRAM IMPREZY*
+    </h2>
 
     <div class = "container" > 
-        <div class= "zdjecie" > 
+
+        <div class = "tekst">
+            <div class = "paragraf">
+                <h3>
+                    Dla dzieci
+                </h3>
+                <p>
+                    Dla najmłodszych uczestników naszego festynu przygotowaliśmy między innymi dmuchańce, animacje i malowanie twarzy
+                </p>
+            </div>
+            <div class = "paragraf">
+                <h3>
+                    Program przygotowany przez służby mundurowe
+                </h3>
+                <p>
+                    Zaproszeni przez nas goście ze straży pożarnej, wojska i policji przygotują dla Państwa zapoznanie ze sprzętem, 
+                    którego używają podczas wykonywania swoich zawodów oraz zapoznają z tym, jak wygląda ich codzienna praca
+                </p>
+            </div>
+            <div class = "paragraf">
+                <h3>
+                    Kurs pierwszej pomocy dla dzieci i dorosłych
+                </h3>
+                <p>
+                   
+                </p>
+            </div>
+
+            <div class = "paragraf">
+                <h3>
+                    Licytacja
+                </h3>
+                <p>
+                   Dokladny program licytacji bedzie uzupełniany na bieżąco
+                </p>
+            </div>
+
+            <div class = "paragraf">
+                <h3>
+                    Oprawa artystyczna
+                </h3>
+                <p>
+                   W ramach oferty artystycznej będzie można obejrzeć występ przygotowany przez uczniów ZPO Styków.
+                </p>
+                <p>
+                   Za oprawę muzyczną wydarzenia będzie odpowiadał pan Marcin Kosmala.
+                </p>
+                <p> 
+                    Dla spragnionych ekstremalnych wrażeń przygotowaliśmy pokaz wspinaczki industrialnej na starej elektrowni.
+                 </p>
+
+            </div>
+
+            <div class = "paragraf">
+                <h3>
+                    Strefa gastronomiczna
+                </h3>
+                <p>
+                   Będzie można zakupić posiłki przygotowne przez koło gospodyń wiejskich oraz mieszkańców Stykowa. 
+                   Dochód z ich sprzedayż będzie przekazany na rehabilitację dla Filipa Turka 
+                </p>
+            </div>
+
+        </div>
+
+        <div class = "zdjecie" > 
             <img src="filip.jpg" alt="Filip Turek">
+            <div class = "p1">
+                Filip Turek - chłopiec dla którego zbieramy pieniądze
+            </div>
         </div>
-
-        <div class="tekst">
-            <h3> Dla najmłodszych</h3>
-
-
-        </div>
-
-
-
-
-
 
     </div>
    
-    <p> dmuchańce </p>
-    <p> animacje </p>
-    <p> malowanie twarzy</p>
-    <p> gry i zabawy </p>
+    <div class = "paragraf" > 
+        <div class = "p2">
+            Serdecznie zapraszamy wszystkich do udziału w festynie i wspomożenia szczytnego celu!
+        </div>
+        <div class = "p3">
+            Gwarantujemy niezapomniane wspomnienia i bardzo dobrą zabawę!
+        </div>
 
-    <p> program dla dzieci będzie przygotowany przez wojsko, policję oraz straż pożarną</p>
-    <p> zapoznanie ze sprzetem oraz praca slużb mundurowych</p>
+    </div>
 
-    <p> kurs pierwszej pomocy dla dzieci i dorosłych</p>
+    <div class = "p4"> 
+        *informacje o wydarzeniu bedą jeszcze na bieżąco aktualizowane, zapraszamy do sprawdzania naszej strony :)
+    </div>
 
-    <p> będzie mozna zakupić przygotowne bedą rówineż posiłki przez koło gospodyń wiejskich oraz mieszkańców stykowa</p>
-dochod z ich spzedazy bedzie przekazany na rehabilitację dla filipa turka 
-
-<p> licytacja </p>
-
-dokladny program licytacji bedzie uzupełniany na bieżąco 
-    <p> pokaz wspinaczki industrialnej na starej elektrowni </p>
-
-    zaparaszmy wszytskich bardzo serdecznie do udziału i wpomożenia szczytnego celu 
-    gwarantujemy niezapomniane wspomnienia i bardzo dobra zabawe 
-
-    wuystep przygotowany przez uczniow zpo stykow 
-
-    oprawę muzyczna wydarzenia zajmie się pan Marcin Kosmala 
-    
 </body>
 </html>
