--- a/main_page.html
+++ b/main_page.html
@@ -74,7 +74,7 @@
                 </h3>
                 <p>
                    Będzie można zakupić posiłki przygotowne przez koło gospodyń wiejskich oraz mieszkańców Stykowa. 
-                   Dochód z ich sprzedayż będzie przekazany na rehabilitację dla Filipa Turka 
+                   Dochód z ich sprzedaży będzie przekazany na rehabilitację dla Filipa Turka 
                 </p>
             </div>
 
