--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class = "zdjecie" > 
-            <img src="filip.jpg" alt="Filip Turek">
+            <img src="./images/filip.jpg" alt="Filip Turek">
             <div class = "p1">
                 Filip Turek - chłopiec dla którego zbieramy pieniądze
             </div>
