--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         FESTYN Z MUNDUREM DLA FILIPKA
     </h1>
     <h2>
-        PROGRAM IMPREZY*
+        PROGRAM IMPREZY* uuuuuuuuuuuuuuuuuuuuuuuuu
     </h2>
 
     <div class = "container" > 
