--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                     Kurs pierwszej pomocy dla dzieci i dorosłych
                 </h3>
                 <p>
-                   
+                   Kurs będzie prowadzony przez dwóch doświadczonych ratowników medycznych. 
+                   Będzie skierowany zarówno dla dzieci jak i dlad dorosłych. 
+                   Każdy będzie mógł się 
                 </p>
             </div>
 
