--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                 </h3>
                 <p>
                    Kurs będzie prowadzony przez dwóch doświadczonych ratowników medycznych. 
-                   Będzie skierowany zarówno dla dzieci jak i dlad dorosłych. 
-                   Każdy będzie mógł się 
+                   Będzie skierowany zarówno dla dzieci jak i dla dorosłych. 
                 </p>
             </div>
 
