--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festyn z mundurem dla Filipka</title>
     <link rel="stylesheet" href="style.css">
+    <meta property="og:title" content="Festyn z mundurem dla Filipka">
+    <meta property="og:description" content="Festyn z mundurem dla Filipka">
+    <meta property="og:image" content="./images/plakat.png">
+    <meta property="og:url" content="https://mikolajpasieka.github.io/festyn_webpage/">
+
 </head>
 <body>
     <h1>
