--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <meta property="og:title" content="Festyn z mundurem dla Filipka">
     <meta property="og:description" content="Festyn z mundurem dla Filipka">
-    <meta property="og:image" content="./images/plakat.png">
+    <meta property="og:image" content='img src="./images/filip.jpg"'>
     <meta property="og:url" content="https://mikolajpasieka.github.io/festyn_webpage/">
 
 </head>
@@ -54,8 +54,66 @@
                     Licytacja
                 </h3>
                 <p>
-                   Dokladny program licytacji bedzie uzupełniany na bieżąco
+                   <img src="./images/flypark.jpeg">
+                   <img src="./images/flypark0.jpeg">
+                   <p>Cena startowa 100 zł (Do licytacji będą dostępne trzy sztuki)</p>
                 </p>
+                <p>
+                   <img src="./images/flyparkwarsztaty.jpeg">
+                   <img src="./images/flypark2.jpeg">
+                   <img src="./images/flypark02.jpeg">
+                   <p>Cena vouchera 899 zł</p>
+                   <p>Cena startowa 500 zł</p>
+                </p>
+                <p>
+                   <img src="./images/happiness.jpeg">
+                   <p>Vaucher obejmuje treningi i dietę na 2 miesiące</p>
+                   <p>Cena vouchera 350 zł</p>
+                   <p>Cena startowa 250 zł</p>
+                </p>
+                <p>
+                   <img src="./images/happiness2.jpeg">
+                   <p>Cena vouchera 130 zł</p>
+                   <p>Cena startowa 100 zł</p>
+                </p>
+                <p>
+                   <img src="./images/wpozofoto.jpeg">
+                   <img src="./images/pakietmini.jpeg">
+                   <p>Cena startowa 200 zł</p>
+                </p>
+                <p>
+                   <img src="./images/pazi.jpeg">
+                   <p>Cena startowa 100 zł</p>
+                </p>
+                <p>
+                   <img src="./images/rzesy.jpeg">
+                   <p>Cena vouchera 200 zł</p>
+                   <p>Cena startowa 150 zł</p>
+                </p>
+                <p>
+                   <img src="./images/stylowy butik.jpeg">
+                   <p>Cena vouchera 150 zł</p>
+                   <p>Cena startowa 100 zł</p>
+                </p>
+                <p>
+                   <img src="./images/urszulazielinska.jpeg">
+                   <p>Cena vouchera 250 zł</p>
+                   <p>Cena startowa 180 zł</p>
+                </p>
+                <p>
+                   <img src="./images/zapraszamy.jpeg">
+                   <img src="./images/zapraszamy1.jpeg">
+                   <p>Cena vouchera 250 zł</p>
+                   <p>Cena startowa 180 zł</p>
+                </p>
+                <p>
+                   <img src="./images/4poryroku.jpeg">
+                   <img src="./images/4poryroku2.jpeg">
+                   <p>Cena vouchera 200 zł</p>
+                   <p>Cena startowa 150 zł</p>
+                </p>
+
+
             </div>
 
             <div class = "paragraf">
