--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <div class = "tekst">
             <div class = "paragraf">
                 <h3>
+                    Data i miejsce
+                </h3>
+                <p>
+                    08-06-2025 boisko w Stykowie
+                </p>
+            </div>
+            <div class = "paragraf">
+                <h3>
                     Dla dzieci
                 </h3>
                 <p>
