--- a/index.html
+++ b/index.html
@@ -47,6 +47,94 @@
                     którego używają podczas wykonywania swoich zawodów oraz zapoznają z tym, jak wygląda ich codzienna praca
                 </p>
             </div>
+            
+    <div class = "paragraf">
+                <h3>
+                    Licytacje 
+                </h3>
+                <p>
+                   <img src="./images/flypark.jpeg">
+                   <img src="./images/flypark0.jpeg">
+                   <p>Cena startowa 100 zł (Do licytacji będą dostępne trzy sztuki)</p>
+                </p>
+    </div>
+    <div class = "paragraf">
+                <p>
+                   <img src="./images/flyparkwarsztaty.jpeg">
+                   <img src="./images/flypark2.jpeg">
+                   <img src="./images/flypark02.jpeg">
+                   <p>Cena vouchera 899 zł</p>
+                   <p>Cena startowa 500 zł</p>
+                </p>
+
+    </div>
+    <div class = "paragraf">
+                <p>
+                   <img src="./images/happiness.jpeg">
+                   <p>Vaucher obejmuje treningi i dietę na 2 miesiące</p>
+                   <p>Cena vouchera 350 zł</p>
+                   <p>Cena startowa 250 zł</p>
+                </p>
+
+
+    </div>
+    <div class = "paragraf">
+                <p>
+                   <img src="./images/happiness2.jpeg">
+                   <p>Cena vouchera 130 zł</p>
+                   <p>Cena startowa 100 zł</p>
+                </p>
+
+    </div>
+    <div class = "paragraf">
+                <p>
+                   <img src="./images/wpozofoto.jpeg">
+                   <img src="./images/pakietmini.jpeg">
+                   <p>Cena startowa 200 zł</p>
+                </p>
+    </div>
+    <div class = "paragraf">
+                <p>
+                   <img src="./images/pazi.jpeg">
+                   <p>Cena startowa 100 zł</p>
+                </p>
+    </div>
+    <div class = "paragraf">
+                <p>
+                   <img src="./images/rzesy.jpeg">
+                   <p>Cena vouchera 200 zł</p>
+                   <p>Cena startowa 150 zł</p>
+                </p>
+    </div>
+    <div class = "paragraf">
+                <p>
+                   <img src="./images/stylowy butik.jpeg">
+                   <p>Cena vouchera 150 zł</p>
+                   <p>Cena startowa 100 zł</p>
+                </p>
+    </div>
+    <div class = "paragraf">
+                <p>
+                   <img src="./images/urszulazielinska.jpeg">
+                   <p>Cena vouchera 250 zł</p>
+                   <p>Cena startowa 180 zł</p>
+                </p>
+    </div>
+    <div class = "paragraf">
+                <p>
+                   <img src="./images/zapraszamy.jpeg">
+                   <img src="./images/zapraszamy1.jpeg">
+                   <p>Cena vouchera 250 zł</p>
+                   <p>Cena startowa 180 zł</p>
+                </p>
+    </div>
+    <div class = "paragraf">
+                   <img src="./images/4poryroku.jpeg">
+                   <img src="./images/4poryroku2.jpeg">
+                   <p>Cena vouchera 200 zł</p>
+                   <p>Cena startowa 150 zł</p>
+                </p>
+    </div>
             <div class = "paragraf">
                 <h3>
                     Kurs pierwszej pomocy dla dzieci i dorosłych
