--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                    <p>Cena vouchera 200 zł</p>
                    <p>Cena startowa 150 zł</p>
                 </p>
+            </div>
             <div class = "paragraf">
                 <h3>
                     Kurs pierwszej pomocy dla dzieci i dorosłych
